--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-ts": "tsc",
-    "postinstall": "npm run build-ts",
-    "start": "node ."
+    "postinstall": "npm run build-ts"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +15,8 @@
     "@types/node": "^14.0.27",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^3.9.7"
   }
 }
