--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "dist/index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "npm run build-ts && node dist/index.js",
         "build-ts": "tsc",
         "postinstall": "npm run build-ts"
     },
